----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-06-30 Alexander M. Turek  <me@derrabus.de>
    * libraries/common.lib.php: Fix against $_REQUEST['cfg'] exploits.

2004-06-29 Michal Čihař  <michal@cihar.com>
    * lang/check_lang.sh: Checks for diffstat presence.

2004-06-28 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/slovak: Updated, thanks to Lubos Klokner (erkac)
    ### 2.6.0-beta2 released


2004-06-27 Michal Čihař  <michal@cihar.com>
    * lang/*: Make all export choices look simmilar ('drop table' -> DROP
      TABLE), removed unused strings (there vere MANY!), fixed some czech
      texts.
    * scripts/find_unused_messages.sh: New script to find unused messages in
      translations.
    
2004-06-27 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_query_box.php: bug #975382, fields list on a non-existing table

2004-06-27 Alexander M. Turek  <rabus@users.sourceforge.net>
    * libraries/dbi/mysql.dbi.lib.php: bug #980594.

2004-06-26 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/hungarian: updates, thanks to Peter Bakondy

2004-06-25 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza).
    * main.php: js error when switching theme, thanks to Michael Keck

2004-06-25 Michal Čihař  <michal@cihar.com>
    * main.php, libraries/select_lang.lib.php: Remember selected charset in
      cookie.
    * libraries/display_export.lib.php: Add back key checking disabling.
    * libraries/export/sql.php: Brand new CREATE query rewriter from LinuxTag,
      fixes bug #979635.
    * read_dump.php: Lets handle better comments, current detection still
      doesn't work with comments inside checked SQL commands, but I thing
      checking these would be overhead (bug #978114).

2004-06-25 Alexander M. Turek  <rabus@users.sourceforge.net>
    * queryframe.php: Undefined index errors.
    * footer.inc.php: bug #979610.