@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-06-30 Marc Delisle  <lem9@users.sourceforge.net>
+    * left.php: fix against security alert, thanks to Garvin
+
 2004-06-30 Alexander M. Turek  <me@derrabus.de>
     * libraries/common.lib.php: Fix against $_REQUEST['cfg'] exploits.
 
